--- a/styles/Sass/Components/Home/Features.module.scss
+++ b/styles/Sass/Components/Home/Features.module.scss
@@ -1,7 +1,29 @@
+@import "../../abstract//variable.module.scss";
+
 .features {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  padding: 20px;
+
+  .service {
+    display: flex;
+    align-items: center;
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px;
+    line-height: 24px;
+  }
+  .dot {
+    width: 16px;
+    height: 20px;
+    border-radius: 50%;
+    border: 3px solid #f1f1f1;
+    // margin: 0 5px;
+    // background: #f1f1f1;
+  }
+}
+
+.title {
+  color: $light;
+  font-size: 35px;
+  font-weight: 700;
 }
