Doctor service and medicine cornar desing in home page

--- a/styles/Sass/Components/Home/banner/_bannerAndDoctorAdd.module.scss
+++ b/styles/Sass/Components/Home/banner/_bannerAndDoctorAdd.module.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 30% 70%;
   // padding: 10px;
-  border-bottom: 2px solid $simpleLight;
+  border-bottom: 2px solid $gray;
 }
 
 // .banner {
