--- a/styles/Sass/Components/Home/banner/_carousel.module.scss
+++ b/styles/Sass/Components/Home/banner/_carousel.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   overflow: hidden;
   // box-shadow: 0 10px 20px rgb(0 0 0 / 20%);
-  border-bottom-left-radius: 20px;
+  // border-bottom-left-radius: 20px;
 }
 @media screen and (max-width: 700px) {
   .container-slider {
