--- a/styles/Sass/abstract/_variable.module.scss
+++ b/styles/Sass/abstract/_variable.module.scss
@@ -4,6 +4,7 @@ $black: #1a202c;
 $light: #4c9dc3;
 $second: #089db1;
 $simpleLight: #96d1e2;
+$gray: #fdfdfd;
 :export {
   primaryColor: $primary;
   whiteColor: $white;
@@ -11,4 +12,5 @@ $simpleLight: #96d1e2;
   lightColor: $light;
   secondary: $second;
   simpleLight: $simpleLight;
+  grayColor: $gray;
 }
