--- a/styles/Sass/global/_global.scss
+++ b/styles/Sass/global/_global.scss
@@ -1,7 +1,20 @@
+@import "~tailwindcss/base";
+@import "~tailwindcss/components";
+@import "~tailwindcss/utilities";
+@import "../abstract//variable.module.scss";
+.slick-slide > div {
+  margin: 0 10px !important;
+}
+
+.slick-list {
+  margin: 0 -10px !important;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: $white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +26,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+h2 {
+  color: $light;
+  font-size: 35px;
+  font-weight: 700;
 }
