order cart design and compleate functionality

--- a/styles/Sass/Components/Home/Doctor.module.scss
+++ b/styles/Sass/Components/Home/Doctor.module.scss
@@ -22,7 +22,7 @@
       max-height: 415px;
       cursor: pointer;
       figure {
-        background-color: $gray;
+        background-color: $Lightgray;
       }
       h2 {
         font-size: 18px;
