--- a/styles/Sass/Components/Order/CostInformation.module.scss
+++ b/styles/Sass/Components/Order/CostInformation.module.scss
@@ -7,12 +7,12 @@
 
   padding: 0px;
   margin-top: 20px;
-  width: 330px;
+  width: 340px;
   text-align: center;
 }
 .checkout_summary {
   border-radius: 5%;
-  padding: 5px 13px;
+  padding: 5px 10px;
   p {
     padding-bottom: 0px;
     margin-bottom: 0px;
@@ -29,6 +29,7 @@
     line-height: 60px;
   }
   .order_Button {
+    line-height: 10px;
     margin: 10px 0px;
   }
 }
