--- a/styles/Sass/common/Header/_header.module.scss
+++ b/styles/Sass/common/Header/_header.module.scss
@@ -21,6 +21,35 @@
 
     .middle_header_body {
       width: 100%;
+      .logo {
+        height: 40px;
+        width: 60px;
+      }
+      .searchInput {
+        width: 100%;
+        max-width: 800px;
+      }
+      .inputField {
+        // border: 2px solid $primary;
+        display: flex;
+        border-radius: 10px;
+        button {
+          background-color: $primary;
+          color: white;
+          padding: 0px 10px;
+        }
+      }
+
+      img {
+        border-radius: 50px;
+        margin-top: 4px !important;
+      }
+      .profileLogo {
+        margin-left: 30px;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
       li {
         margin: 0px;
         font-size: 16px;
@@ -33,6 +62,7 @@
         padding: 9px;
         box-shadow: 0px 0px 1px #f9f9f9;
         position: relative;
+
         .totalCartItem {
           position: absolute;
           width: 22px;
@@ -58,15 +88,6 @@
       max-height: 14vh;
     }
 
-    :global .searchInput {
-      width: 100%;
-      max-width: 800px;
-
-      :global input {
-        border: 2px solid $primary !important;
-        border-radius: 10px;
-      }
-    }
     .iconList {
       :global li svg {
         color: $white;
