--- a/styles/Sass/pages/dashboard/dashboard.module.scss
+++ b/styles/Sass/pages/dashboard/dashboard.module.scss
@@ -1,24 +1,28 @@
-aside {
-  width: 20%;
-  position: sticky;
-  overflow: hidden;
-  top: 0;
-}
-main {
-  width: 80%;
-  padding: 0px 35px;
-}
 .menuAvatar {
   display: none;
 }
 .dashboard {
   background-color: #f2edf3;
+
+  aside {
+    width: 20%;
+    position: sticky;
+    overflow: hidden;
+    top: 0;
+  }
+  main {
+    width: 80%;
+    padding: 0px 35px;
+
+    .dashboardBody {
+      display: grid;
+      grid-template-columns: 70% 30%;
+      gap: 10px;
+    }
+  }
 }
 
-.dashboardBody {
-  display: flex;
-}
-.dashboard .active-menu {
+.dashboard .active_menu {
   height: 60px;
   padding: 10px;
   font-size: 25px;
@@ -34,31 +38,34 @@ main {
   }
   .dashboardBody {
     display: block;
+    .aside {
+      width: 100%;
+      position: relative;
+      top: 0;
+    }
+    main {
+      width: 100%;
+      padding: 0px 5px;
+    }
   }
   .menuAvatar {
     display: block;
     padding-top: 11px;
   }
-  .aside {
-    width: 100%;
-    position: relative;
-    top: 0;
-  }
+
   .logo {
     width: 34px;
   }
-  main {
-    width: 100%;
-    padding: 0px 5px;
-  }
 }
 @media (max-width: 870px) {
-  aside {
-    width: auto;
-  }
-  main {
-    width: 80%;
-    padding: 0px 15px;
+  .dashboardBody {
+    aside {
+      width: auto;
+    }
+    main {
+      width: 80%;
+      padding: 0px 15px;
+    }
   }
 }
 /* .NewNotice .noticeHeader,
