--- a/styles/Sass/Components/Home/banner/_carousel.module.scss
+++ b/styles/Sass/Components/Home/banner/_carousel.module.scss
@@ -7,11 +7,7 @@
   // box-shadow: 0 10px 20px rgb(0 0 0 / 20%);
   // border-bottom-left-radius: 20px;
 }
-@media screen and (max-width: 700px) {
-  .container-slider {
-    margin: 100px 10px 0;
-  }
-}
+
 .carousel_inner {
   width: 100%;
   height: 100%;
@@ -80,5 +76,59 @@
   }
   .dot.active {
     background: rgb(32, 32, 32);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-slider {
+    margin: 100px 10px 0;
+  }
+  .carousel {
+    height: 300px;
+  }
+  .carousel_inner {
+    // .btn_slide {
+    //   width: 20px;
+    //   height: 20px;
+    // }
+
+    // .btn_slide svg {
+    //   width: 20px;
+    //   height: 13px;
+    //   pointer-events: none;
+    // }
+
+    // .dot {
+    //   width: 20px;
+    //   height: 20px;
+    //   border: 3px solid #f1f1f1;
+    // }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .container-slider {
+    margin: 100px 10px 0;
+  }
+  .carousel {
+    height: 100%;
+  }
+  .carousel_inner {
+    .btn_slide {
+      width: 20px;
+      height: 20px;
+    }
+
+    .btn_slide svg {
+      width: 20px;
+      height: 13px;
+      pointer-events: none;
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      border: 1px solid #f1f1f1;
+    }
   }
 }
