--- a/styles/Sass/Components/Home/doctorCarousel.module.scss
+++ b/styles/Sass/Components/Home/doctorCarousel.module.scss
@@ -40,3 +40,22 @@
     }
   }
 }
+
+@media (max-width: 640px) {
+  .DoctorCarousel_inner {
+    max-width: 100%;
+    margin: 10px auto;
+  }
+  .titlePart {
+    padding: 20px;
+    .title {
+      color: $light;
+      font-size: 30px;
+      font-weight: 700;
+      text-align: center;
+    }
+    p {
+      display: none;
+    }
+  }
+}
