--- a/styles/Sass/pages/doctor/doctor.module.scss
+++ b/styles/Sass/pages/doctor/doctor.module.scss
@@ -34,3 +34,20 @@
     text-align: center;
   }
 }
+
+@media (max-width: 640px) {
+  .ambulance {
+    padding: 0px;
+  }
+  .titlePart {
+    .title {
+      color: $light;
+      font-size: 30px;
+      font-weight: 700;
+      text-align: center;
+    }
+    p {
+      display: none;
+    }
+  }
+}
