--- a/styles/Sass/Components/OrderCart/CartProduct.module.scss
+++ b/styles/Sass/Components/OrderCart/CartProduct.module.scss
@@ -2,6 +2,7 @@
 
 .cardProduct {
   padding: 20px;
+
   .countButton {
     display: flex;
     align-items: center;
@@ -67,7 +68,8 @@
 .hyper_line {
   padding: 1px;
   width: 98%;
-  margin: 0px 6px;
+  margin: 0px 3px;
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 600px) {
