--- a/styles/Sass/Components/OrderCart/_order_cart.module.scss
+++ b/styles/Sass/Components/OrderCart/_order_cart.module.scss
@@ -7,13 +7,13 @@
   position: relative;
 
   aside {
-    // width: 20%;
+    width: 30%;
     position: sticky;
     // overflow: hidden;
     top: 0;
   }
   main {
-    // width: 80%;
+    width: 70%;
     padding: 0px 35px;
   }
 }
