--- a/styles/Sass/common/custom/button.module.scss
+++ b/styles/Sass/common/custom/button.module.scss
@@ -5,10 +5,16 @@
   font-size: 18px;
   font-weight: 600;
 }
+.simpleButton {
+  // width: 100%;
+  height: 50px;
+  font-size: 18px;
+  font-weight: 600;
+}
 
 .largestButton {
-  width: 200px;
-  height: 40px;
+  // width: 100%;
+  height: 50px;
   font-size: 18px;
   font-weight: 600;
 }
