--- a/styles/Sass/Components/DashboardPart/Dashboard/_recentMessage.module.scss
+++ b/styles/Sass/Components/DashboardPart/Dashboard/_recentMessage.module.scss
@@ -20,7 +20,7 @@
   }
   .messageCard {
     border-radius: 10px;
-    height: 70px;
+    height: 100px;
     margin-bottom: 2px;
     display: flex;
     justify-content: space-between;
@@ -57,6 +57,29 @@
       cursor: pointer;
       text-align: center;
       margin: 3px auto;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .recentMessage {
+    .recentMessageBody {
+      // background-color: $white;
+      border-radius: 10px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 5px;
+    }
+  }
+}
+@media (max-width: 640px) {
+  .recentMessage {
+    .recentMessageBody {
+      // background-color: $white;
+      border-radius: 5px;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 2px;
     }
   }
 }
