--- a/styles/Sass/Components/DashboardPart/Dashboard/_recentOrders.module.scss
+++ b/styles/Sass/Components/DashboardPart/Dashboard/_recentOrders.module.scss
@@ -43,3 +43,17 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .recentOrder {
+    .recentOrderBody {
+      overflow-x: scroll;
+      padding: 10px;
+      border-radius: 10px;
+      .table {
+        width: 160%;
+        text-align: center;
+      }
+    }
+  }
+}
