--- a/styles/Sass/Components/DashboardPart/_dashboardCard.module.scss
+++ b/styles/Sass/Components/DashboardPart/_dashboardCard.module.scss
@@ -4,6 +4,12 @@
     background-color: rgb(243 238 238); */
   padding: 5px;
 }
+.dashboardCard {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5;
+  margin-top: 10px;
+}
 .cardInfo {
   height: 150px;
   width: 225px;
@@ -12,6 +18,7 @@
   padding: 8px;
   text-align: center;
   color: $black;
+
   h2 {
     font-size: 20px;
     color: $black;
@@ -37,5 +44,19 @@
     cursor: pointer;
     text-align: center;
     margin: 0px auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .dashboardCard {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+}
+
+@media (max-width: 640px) {
+  .dashboardCard {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
   }
 }
