--- a/styles/Sass/pages/findBlood/findBlood.module.scss
+++ b/styles/Sass/pages/findBlood/findBlood.module.scss
@@ -1,15 +1,15 @@
 @import "../../abstract//variable.module.scss";
 
 .findBlood {
-  aside {
-    // width: 20%;
-    position: sticky;
-    // overflow: hidden;
-    top: 0;
-    background-color: $primary;
-    color: white;
-    border-top: 2px solid $light;
-  }
+  // aside {
+  //   // width: 20%;
+  //   position: sticky;
+  //   // overflow: hidden;
+  //   top: 0;
+  //   background-color: $primary;
+  //   color: white;
+  //   border-top: 2px solid $light;
+  // }
   main {
     padding: 10px 5px;
     .memberCartBody {
