--- a/styles/Sass/Components/Home/doctorCarousel.module.scss
+++ b/styles/Sass/Components/Home/doctorCarousel.module.scss
@@ -1,16 +1,19 @@
 @import "../../abstract//variable.module.scss";
 .carousel {
+  background-color: $Lightgray;
+  padding: 50px 0px;
+  margin-top: 45px;
   .titlePart {
     padding: 20px;
     .title {
       color: $light;
-      font-size: 35px;
+      font-size: 25px;
       font-weight: 700;
     }
     p {
       font-size: 18px;
       font-weight: 500;
-      color: $primary;
+      color: $white;
       cursor: pointer;
     }
   }
@@ -44,6 +47,11 @@
 }
 
 @media (max-width: 640px) {
+  .carousel {
+    background-color: rgb(255, 255, 255);
+    padding-bottom: 0px;
+    margin-top: 5px;
+  }
   .DoctorCarousel_inner {
     max-width: 100%;
     margin: 10px auto;
