--- a/styles/Sass/abstract/_variable.module.scss
+++ b/styles/Sass/abstract/_variable.module.scss
@@ -5,7 +5,7 @@ $light: #4c9dc3;
 $second: #089db1;
 $simpleLight: #96d1e2;
 $gray: #d0cccc;
-$Lightgray: #fafaf9;
+$Lightgray: #fdfdfd;
 :export {
   primaryColor: $primary;
   whiteColor: $white;
