--- a/styles/Sass/Components/Home/banner/_carousel.module.scss
+++ b/styles/Sass/Components/Home/banner/_carousel.module.scss
@@ -1,6 +1,4 @@
 .carousel {
-  // max-width: 700px;
-  height: 360px;
   // margin: 1px auto;
   position: relative;
   overflow: hidden;
@@ -19,14 +17,16 @@
     // position: absolute;
     opacity: 0;
     transition: opacity ease-in-out 0.4s;
+
+    img {
+      width: 2000px;
+      height: 100%;
+      object-fit: cover;
+      margin-bottom: 0px !important;
+      padding: 0px !important;
+    }
   }
-  .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin-bottom: 0px !important;
-    padding: 0px !important;
-  }
+
   .active_anim {
     opacity: 1;
   }
