--- a/styles/Sass/common/model/dynamicModel.module.scss
+++ b/styles/Sass/common/model/dynamicModel.module.scss
@@ -10,6 +10,27 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
+
+  .addProduct_inner_popup {
+    overflow-y: visible;
+    max-width: 700px;
+    min-height: 500px;
+  }
+
+  .map_inner_popup {
+    max-width: 500px;
+    max-height: 500px;
+    overflow-y: visible;
+    background: none;
+    background-color: none !important;
+
+    img {
+      width: 500px;
+      height: 500px;
+      border-radius: 10px;
+      border: 2px solid gray;
+    }
+  }
 }
 .inner_successOrErrorPopup {
   position: relative;
@@ -86,8 +107,11 @@
   min-height: 400px;
   overflow: scroll;
 }
+
 .inner_popup,
-.notice_inner_popup {
+.map_inner_popup,
+.notice_inner_popup,
+.addProduct_inner_popup {
   position: relative;
   padding: 32px;
   width: 100%;
@@ -100,15 +124,15 @@
     // width: 180px !important;
     // height: 200px !important;
   }
-  .singleDoctor {
-    img {
-      width: 180px !important;
-      height: 200px !important;
-    }
-    .doctorDetails {
-      width: 40% !important;
-    }
-  }
+  // .singleDoctor {
+  //   img {
+  //     width: 180px !important;
+  //     height: 200px !important;
+  //   }
+  //   .doctorDetails {
+  //     width: 40% !important;
+  //   }
+  // }
 
   .productDetails {
     width: 50%;
@@ -147,14 +171,14 @@
       font-size: 20px;
       height: 40px;
       width: 40px;
-      padding: -1px 0px;
+      padding: 6px 0px;
       text-align: center;
       color: $white;
       background-color: $light;
     }
     .offer {
       font-weight: 500;
-      font-size: 20px;
+      font-size: 13px;
       color: $primary;
     }
     .price {
@@ -164,10 +188,11 @@
     }
     .increaseAndDecrease {
       font-weight: 700;
-      font-size: 20px;
+      font-size: 25px;
       height: 40px;
       width: 40px;
       text-align: center;
+      padding-top: 4px;
       color: $black;
       background-color: $gray;
       border-radius: 10px;
@@ -211,4 +236,30 @@
   margin-bottom: 27px;
   border-radius: 10px;
   font-weight: 600;
+}
+
+@media (max-width: 640px) {
+  .popup_container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    .inner_popup,
+    .map_inner_popup,
+    .notice_inner_popup,
+    .addProduct_inner_popup {
+      position: relative;
+      padding: 32px;
+      width: 100%;
+      max-width: 320px;
+      max-height: 400px;
+      background-color: white;
+      border-radius: 5px;
+      overflow-y: scroll;
+    }
+    .addProduct_inner_popup {
+      max-width: 320px;
+      min-height: 100%;
+      overflow-y: scroll;
+    }
+  }
 }
