--- a/styles/Sass/pages/ambulance/_ambulance.module.scss
+++ b/styles/Sass/pages/ambulance/_ambulance.module.scss
@@ -1,6 +1,7 @@
 @import "../../abstract//variable.module.scss";
 .ambulance {
   padding: 20px;
+  margin-top: 172px;
   .ambulanceCard {
     width: 320px;
   }
