--- a/styles/Sass/pages/findBlood/_findBlood.module.scss
+++ b/styles/Sass/pages/findBlood/_findBlood.module.scss
@@ -1,6 +1,7 @@
 @import "../../abstract//variable.module.scss";
 
 .findBlood {
+  padding-top: 172px;
   // aside {
   //   // width: 20%;
   //   position: sticky;
