--- a/styles/Sass/Components/Home/banner/_bannerAndDoctorAdd.module.scss
+++ b/styles/Sass/Components/Home/banner/_bannerAndDoctorAdd.module.scss
@@ -1,5 +1,6 @@
 @import "../../../abstract//variable.module.scss";
 .bannerAndDoctorAdd {
+  margin-top: 172px;
   display: grid;
   grid-template-columns: 20% 80%;
   // padding: 10px;
