--- a/styles/Sass/pages/auth/login&signIn.module.scss
+++ b/styles/Sass/pages/auth/login&signIn.module.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Spline+Sans&display=swap");
 
 .login_container {
+  margin-top: 172px;
   position: relative;
   width: 100%;
   min-height: 100vh;
