--- a/styles/Sass/pages/medicine/_medicine.module.scss
+++ b/styles/Sass/pages/medicine/_medicine.module.scss
@@ -1,6 +1,7 @@
 @import "../../abstract//variable.module.scss";
 
 .medicine {
+  padding-top: 172px;
   aside {
     // width: 20%;
     position: sticky;
