--- a/styles/Sass/Components/Home/doctorCarousel.module.scss
+++ b/styles/Sass/Components/Home/doctorCarousel.module.scss
@@ -22,22 +22,24 @@
     margin: 10px auto;
 
     .doctorCard {
-      // max-height: 415px;
+      min-height: 460px;
       cursor: pointer;
       border: 2px solid $light;
       figure {
         height: 200px;
-        background-color: $white;
+        background-color: #f5f6e4;
       }
       h2 {
         font-size: 18px;
         font-weight: 600;
+        color: white;
       }
       img {
         max-height: 180px !important;
       }
     }
     .doctorCardBody {
+      height: 256px;
       color: white;
       background-color: $light;
       padding: 15px !important;
