--- a/styles/Sass/common/model/_doctorModel.module.scss
+++ b/styles/Sass/common/model/_doctorModel.module.scss
@@ -16,6 +16,7 @@
   position: relative;
   padding: 32px;
   width: 100%;
+  background-color: white;
   max-width: 800px;
   min-height: 400px;
   border-radius: 5px;
